--- a/raseed-backend/requirements.txt
+++ b/raseed-backend/requirements.txt
@@ -10,17 +10,17 @@ firebase-admin==6.2.0
 # Environment
 python-dotenv==1.0.0
 
-# For Step 2 (AI Integration)
-google-generativeai==0.3.0
+# AI Integration - Step 2
+google-generativeai==0.3.2
 google-cloud-aiplatform==1.36.0
 Pillow==10.0.1
+requests==2.31.0
 
 # For Step 4 (Query Processing)
 openai==1.3.0
 langchain==0.0.350
 
 # Utilities
-requests==2.31.0
 aiofiles==23.2.1
 
 # Development
